# Multi-Agent-SQL-Pipeline

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yaml  docker_build_log.txt  docker_build_log2.txt  docker_build_log_utf8.txt  env.example  main.py  pyproject.toml  requirements.txt  start.sh
.github/workflows/: build-docker-image.yaml  docker-build.yaml  merge-docker-images.yaml  python-tests.yml
pipelines/: staffconnect_chat.py
pipelines/common_files/: llm_utils.py  logging_utils.py  sql_utils.py  ui_utils.py  viz_utils.py
pipelines/staffconnect_chat_files/: anomaly_agent.py  audittrail_agent.py  base_agent.py  chains.py  elmah_error_agent.py  router_agent.py  trend_agent.py
pipelines/staffconnect_chat_files/memory/: elmah_baseline.txt
tests/: test_utils.py
